# AutoTask

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  engine.py  flow_manager.py  logger.py  parser.py  scheduler.py  step_executor.py  variables.py
docs/: bug_fix_history.md  分析代码，测试.json 任务未执行.md  完整依赖关系图.md
gui/: __init__.py  main_window.py  node_editor_dialog.py  properties_panel.py  scheduler_dialog.py  step_editor.py  styles_bak.py  toolbox_panel.py
gui/main_window/: __init__.py  node_handler.py  schedule_handler.py  schedule_panel.py  task_executor.py  task_manager.py  ui_builder.py
gui/node_graph/: __init__.py  edge_widget.py  graph_scene.py  graph_view.py  node_toolbar.py  node_types.py  node_widget.py  port_widget.py
gui/step_panels/: __init__.py  control_panel.py  (+6 more)
operations/: __init__.py  clipboard.py  condition.py  control.py  excel.py  file_operations.py  image_recognition.py  keyboard.py  loop.py  mouse.py  ocr.py  step_executor.py  window.py
plugins/: __init__.py  example_plugin.py  plugin_manager.py
resources/: AI自动回复.json  Excel.json  测试.json
tests/: test_all.py  test_arithmetic.py  test_clipboard.py  test_condition.py  test_edge_widget.py  test_engine.py  test_excel.py  test_file_operations.py  test_graph_scene.py  test_graph_view.py  test_image_recognition.py  test_keyboard.py  test_logger.py  test_mouse.py  test_node_types.py  test_node_widget.py  test_parser.py  test_port_widget.py  test_scheduler.py  test_variables.py  test_window.py
utils/: __init__.py  resource_path.py
(+34 files in other folders)
