[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoFlow"
version = "1.0.0"
description = "自动化操作软件"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "mss>=10.0.0",
    "APScheduler>=3.10.0",
    "pyperclip>=1.8.2",
    "pywin32>=306",
    "psutil>=5.9.0",
    "keyboard>=0.13.5"
]

[project.scripts]
autoflow = "main:main"